# llm-pdf-summary

./: .gitignore  LICENSE  README.md  main.py  prompt.txt  pyproject.toml  requirements.txt
